--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.TestTaskQuestions"
         tools:targetApi="31">
         <activity
+            android:name=".gameScreen.GameActivity"
+            android:exported="false" />
+        <activity
             android:name=".mainScreen.MainActivity"
             android:exported="true">
             <intent-filter>
