--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             android:name=".presentation.gameScreen.GameActivity"
             android:exported="false" />
         <activity
-            android:name=".presentation.mainScreen.MenuActivity"
+            android:name=".presentation.menuScreen.MenuActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
